[package]
name = "bevy_webview"
version = "0.2.2"
edition = "2021"
description = "Rapidly iterate and build Bevy UI's with existing web-based technologies"
repository = "https://github.com/blaind/bevy_webview"
keywords = ["bevy"]
categories = [
    "game-engines"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"

[workspace]
members = [
  "crates/headless_webview",
  "crates/headless_webview_engine",
]

[dependencies]
crossbeam-channel = "0.5.1"
bevy = { version = "0.8.1", features = [
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "wayland",
] }
headless_webview = { version = "0.1.1", path = "./crates/headless_webview", features = ["protocol"] }
headless_webview_engine = { version = "0.1.1", path = "./crates/headless_webview_engine", optional = true }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# TODO: feature-gate url + mime_guess only when using local assets?
url = "2.2"
mime_guess = "2.0.3"

[dev-dependencies]
rand = "0.8.4"

[features]
default = ["engine"]
engine = ["headless_webview_engine"]
