[package]
name = "headless_webview"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Headless Webview Traits"

[dependencies]
url = "2.2"
thiserror = "1.0.30"
http = "0.2.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[features]
default = []
protocol = []
